// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildCommand build: mint consumed 1`] = `"0"`;

exports[`buildCommand build: mint consumed 2`] = `"0"`;

<<<<<<< HEAD
exports[`buildCommand build: mint cost 1`] = `"6.527"`;

exports[`buildCommand build: mint cost 2`] = `"6.527"`;
=======
exports[`buildCommand build: mint cost 1`] = `"6.659"`;

exports[`buildCommand build: mint cost 2`] = `"6.659"`;
>>>>>>> feat(@neo-one/smart-contract-compiler): Do not persist storage on uncaught exception
